--- a/models.ipynb
+++ b/models.ipynb
@@ -1214,19 +1214,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Conditional outcome models (Q models)\n",
     "def make_Q_model():\n",
     "    ''' A function that returns a general ML q model for later use in k-folding'''\n",
-    "    return xgb.XGBClassifier()\n",
+    "    return xgb.XGBClassifier(eval_metric = 'mlogloss')\n",
     "\n",
     "# Propensity score models (g models)\n",
     "def make_g_model():\n",
     "    ''' A function that returns a g model for computing propensity scores'''\n",
-    "    return xgb.XGBClassifier()"
+    "    return xgb.XGBClassifier(eval_metric = 'mlogloss')"
    ]
   },
   {
@@ -1333,7 +1333,23 @@
     "\n",
     "    assert np.isnan(predictions0).sum() == 0\n",
     "    assert np.isnan(predictions1).sum() == 0\n",
-    "    return predictions0, predictions1, predictions2, predictions3, predictions4"
+    "    return predictions0, predictions1, predictions2, predictions3, predictions4\n",
+    "\n",
+    "def ate_aiptw(Q_control, Q_treat, g, A, Y, prob_t=None):\n",
+    "    \"\"\"Double ML estimator for the ATE\n",
+    "    Return: aiptw of ATE and its standard error\"\"\"\n",
+    "\n",
+    "    # number of observations\n",
+    "    n = Y.shape[0]\n",
+    "\n",
+    "    # ate aiptw\\n\"\n",
+    "    tau_hat = (Q_treat - Q_control + A*(Y-Q_treat)/g - (1-A)*(Y-Q_control)/(1-g)).mean()\n",
+    "    \n",
+    "    # influence curve and standard error of aiptw\n",
+    "    phi = Q_treat - Q_control + A*(Y-Q_treat)/g - (1-A)*(Y-Q_control)/(1-g) - tau_hat\n",
+    "    std_hat = np.std(phi) / np.sqrt(n)\n",
+    "    \n",
+    "    return tau_hat, std_hat"
    ]
   },
   {
@@ -1356,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1366,29 +1382,15 @@
       "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
       "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[22:17:34] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "[22:17:59] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "[22:18:26] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "[22:18:56] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n",
-      "[22:19:25] WARNING: /opt/concourse/worker/volumes/live/7a2b9f41-3287-451b-6691-43e9a6c0910f/volume/xgboost-split_1619728204606/work/src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
-     ]
     }
    ],
    "source": [
     "\n",
-    "# Fit Q(X,A) model\n",
+    "# Fit Q(A,X) model\n",
     "# get conditional outcomes\n",
     "Q0_lm, Q1_lm, Q2_lm, Q3_lm, Q4_lm = outcome_k_fold_fit_and_predict(\n",
     "    make_Q_model, X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], \n",
-    "    A=data_xgboost[\"treatment_bins\"], n_splits=5, output_type=\"binary\",eval_metric = 'mlogloss')\n",
-    "\n",
-    "# Fit g(x) models\n",
-    "#g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=5)"
+    "    A=data_xgboost[\"treatment_bins\"], n_splits=5, output_type=\"binary\")"
    ]
   },
   {
@@ -1396,27 +1398,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Fit g(x) models\n",
+    "g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=5)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.02410747, 0.01306038, 0.01481371, ..., 0.04631501, 0.02701618,\n",
-       "       0.0221121 ])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Q0_lm"
+    "data_and_nuisance_estimates_xgb = pd.DataFrame(\n",
+    "    {'g': g, 'Q_control': Q0_lm, 'Q_treat': Q1_lm, 'A': data_xgboost[\"treatment_bins\"], 'Y': data_xgboost[\"durable_purchase\"]})\n",
+    "\n",
+    "# AIPW for 5-10% inflation predictors compared to 0-5%\n",
+    "tau_hat, std_hat = ate_aiptw(**data_and_nuisance_estimates_xgb)\n",
+    "print(f\"The ATE AIPTW is {tau_hat} with a std = {std_hat}\")"
    ]
   }
  ],
