--- a/models.ipynb
+++ b/models.ipynb
@@ -1214,17 +1214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Conditional outcome models (Q models)\n",
-    "def make_Q_model():\n",
+    "def make_Q_model(eval_metric='mlogloss'):\n",
     "    ''' A function that returns a general ML q model for later use in k-folding'''\n",
     "    return xgb.XGBClassifier(eval_metric = 'mlogloss')\n",
     "\n",
     "# Propensity score models (g models)\n",
-    "def make_g_model():\n",
+    "def make_g_model(eval_metric='mlogloss'):\n",
     "    ''' A function that returns a g model for computing propensity scores'''\n",
     "    return xgb.XGBClassifier(eval_metric = 'mlogloss')"
    ]
@@ -1259,7 +1259,7 @@
     "    for train_index, test_index in kf.split(X, A):\n",
     "        X_train = X.iloc[train_index]\n",
     "        A_train = A.iloc[train_index]\n",
-    "        g = xgb.XGBClassifier()\n",
+    "        g = make_model\n",
     "        g.fit(X_train, A_train)\n",
     "        \n",
     "        # get predictions for split\n",
@@ -1268,6 +1268,7 @@
     "    # sanity check that overlap holds\n",
     "    assert np.isnan(predictions).sum() == 0\n",
     "    return predictions\n",
+    "\n",
     "\n",
     "def outcome_k_fold_fit_and_predict(make_model, X:pd.DataFrame, y:np.array, A:np.array, n_splits:int, output_type:str):\n",
     "    '''\n",
@@ -1330,10 +1331,10 @@
     "            predictions0[test_index] = q.predict(X0.iloc[test_index])\n",
     "            predictions1[test_index] = q.predict(X1.iloc[test_index])\n",
     "\n",
-    "\n",
     "    assert np.isnan(predictions0).sum() == 0\n",
     "    assert np.isnan(predictions1).sum() == 0\n",
     "    return predictions0, predictions1, predictions2, predictions3, predictions4\n",
+    "\n",
     "\n",
     "def ate_aiptw(Q_control, Q_treat, g, A, Y, prob_t=None):\n",
     "    \"\"\"Double ML estimator for the ATE\n",
@@ -1372,25 +1373,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
-      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "# Fit Q(A,X) model\n",
     "# get conditional outcomes\n",
     "Q0_lm, Q1_lm, Q2_lm, Q3_lm, Q4_lm = outcome_k_fold_fit_and_predict(\n",
     "    make_Q_model, X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], \n",
     "    A=data_xgboost[\"treatment_bins\"], n_splits=5, output_type=\"binary\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>treatment_bins</th>\n",
+       "      <th>durable_purchase</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247282</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247283</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247284</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247285</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247286</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>247287 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        treatment_bins  durable_purchase\n",
+       "0                  0.0               1.0\n",
+       "1                  NaN               1.0\n",
+       "2                  0.0               1.0\n",
+       "3                  0.0               NaN\n",
+       "4                  1.0               1.0\n",
+       "...                ...               ...\n",
+       "247282             0.0              -1.0\n",
+       "247283             0.0              -1.0\n",
+       "247284             4.0               1.0\n",
+       "247285             0.0               1.0\n",
+       "247286             4.0               1.0\n",
+       "\n",
+       "[247287 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[[\"treatment_bins\",\"durable_purchase\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    218495.000000\n",
+       "mean          0.036566\n",
+       "std           0.029388\n",
+       "min           0.000270\n",
+       "25%           0.018659\n",
+       "50%           0.029036\n",
+       "75%           0.045107\n",
+       "max           0.739693\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(Q0_lm).describe()"
    ]
   },
   {
@@ -1405,9 +1541,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ATE AIPTW is 1.272947023869124 with a std = 0.021873424846318285\n"
+     ]
+    }
+   ],
    "source": [
     "data_and_nuisance_estimates_xgb = pd.DataFrame(\n",
     "    {'g': g, 'Q_control': Q0_lm, 'Q_treat': Q1_lm, 'A': data_xgboost[\"treatment_bins\"], 'Y': data_xgboost[\"durable_purchase\"]})\n",
