fixed aipw propensity scores and probs

--- a/models.ipynb
+++ b/models.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1209,29 +1209,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Helper Functions"
+    "***APIW Estimation***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Conditional outcome models (Q models)\n",
-    "def make_Q_model(eval_metric='mlogloss'):\n",
+    "def make_Q_model():\n",
     "    ''' A function that returns a general ML q model for later use in k-folding'''\n",
     "    return xgb.XGBClassifier(eval_metric = 'mlogloss')\n",
     "\n",
+    "\n",
     "# Propensity score models (g models)\n",
-    "def make_g_model(eval_metric='mlogloss'):\n",
+    "def make_g_model():\n",
     "    ''' A function that returns a g model for computing propensity scores'''\n",
     "    return xgb.XGBClassifier(eval_metric = 'mlogloss')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1252,22 +1253,30 @@
     "    n_splits: number of splits to use\n",
     "    '''\n",
     "\n",
-    "    predictions = np.full_like(A, np.nan, dtype=float)\n",
+    "    predictions = np.empty((len(X),5), dtype=float)  # row per obs, col per treatment bin\n",
     "    kf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=RANDOM_SEED)\n",
     "\n",
     "    kf.split(X, A)\n",
     "    for train_index, test_index in kf.split(X, A):\n",
     "        X_train = X.iloc[train_index]\n",
     "        A_train = A.iloc[train_index]\n",
-    "        g = make_model\n",
+    "        g = make_model()\n",
     "        g.fit(X_train, A_train)\n",
     "        \n",
     "        # get predictions for split\n",
-    "        predictions[test_index] = g.predict_proba(X.iloc[test_index])[:, 1]\n",
+    "        predictions[test_index] = g.predict_proba(X.iloc[test_index])\n",
     "    \n",
     "    # sanity check that overlap holds\n",
     "    assert np.isnan(predictions).sum() == 0\n",
+    "\n",
     "    return predictions\n",
+    "\n",
+    "\n",
+    "def conditionalize_propensity_scores(g):\n",
+    "    divisors = g+g[:,0][:,np.newaxis]\n",
+    "    g_cond = g / divisors\n",
+    "    g_cond[:,0] = 1  # won't use, but for completeness\n",
+    "    return g_cond\n",
     "\n",
     "\n",
     "def outcome_k_fold_fit_and_predict(make_model, X:pd.DataFrame, y:np.array, A:np.array, n_splits:int, output_type:str):\n",
@@ -1285,16 +1294,17 @@
     "    y: array of outcomes\n",
     "    A: array of treatments\n",
     "    n_splits: number of splits to use\n",
-    "    output_type: type of outcome, \"binary\" or \"continuous\"\n",
+    "    output_type: type of outcome, \"categorical\" or \"continuous\"\n",
     "    '''\n",
     "\n",
-    "    predictions0 = np.full_like(A, np.nan, dtype=float)\n",
-    "    predictions1 = np.full_like(y, np.nan, dtype=float)\n",
-    "    predictions2 = np.full_like(y, np.nan, dtype=float)\n",
-    "    predictions3 = np.full_like(y, np.nan, dtype=float)\n",
-    "    predictions4 = np.full_like(y, np.nan, dtype=float)\n",
+    "    # initialize: row per obs, col per outcome\n",
+    "    predictions0 = np.empty((len(X),3), dtype=float)\n",
+    "    predictions1 = np.empty((len(X),3), dtype=float)\n",
+    "    predictions2 = np.empty((len(X),3), dtype=float)\n",
+    "    predictions3 = np.empty((len(X),3), dtype=float)\n",
+    "    predictions4 = np.empty((len(X),3), dtype=float)\n",
     "\n",
-    "    if output_type == 'binary':\n",
+    "    if output_type == 'categorical':\n",
     "        kf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=RANDOM_SEED)\n",
     "    elif output_type == 'continuous':\n",
     "        kf = KFold(n_splits=n_splits, shuffle=True, random_state=RANDOM_SEED)\n",
@@ -1321,15 +1331,15 @@
     "        q = make_model()\n",
     "        q.fit(X_train, y_train)\n",
     "\n",
-    "        if output_type =='binary':\n",
-    "            predictions0[test_index] = q.predict_proba(X0.iloc[test_index])[:, 1]\n",
-    "            predictions1[test_index] = q.predict_proba(X1.iloc[test_index])[:, 1]\n",
-    "            predictions2[test_index] = q.predict_proba(X2.iloc[test_index])[:, 1]\n",
-    "            predictions3[test_index] = q.predict_proba(X3.iloc[test_index])[:, 1]\n",
-    "            predictions4[test_index] = q.predict_proba(X4.iloc[test_index])[:, 1]\n",
+    "        if output_type =='categorical':\n",
+    "            predictions0[test_index,:] = q.predict_proba(X0.iloc[test_index])\n",
+    "            predictions1[test_index,:] = q.predict_proba(X1.iloc[test_index])\n",
+    "            predictions2[test_index,:] = q.predict_proba(X2.iloc[test_index])\n",
+    "            predictions3[test_index,:] = q.predict_proba(X3.iloc[test_index])\n",
+    "            predictions4[test_index,:] = q.predict_proba(X4.iloc[test_index])\n",
     "        elif output_type == 'continuous':\n",
-    "            predictions0[test_index] = q.predict(X0.iloc[test_index])\n",
-    "            predictions1[test_index] = q.predict(X1.iloc[test_index])\n",
+    "            predictions0[test_index,:] = q.predict(X0.iloc[test_index])\n",
+    "            predictions1[test_index,:] = q.predict(X1.iloc[test_index])\n",
     "\n",
     "    assert np.isnan(predictions0).sum() == 0\n",
     "    assert np.isnan(predictions1).sum() == 0\n",
@@ -1355,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1373,170 +1383,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit Q(A,X) model\n",
     "# get conditional outcomes\n",
-    "Q0_lm, Q1_lm, Q2_lm, Q3_lm, Q4_lm = outcome_k_fold_fit_and_predict(\n",
+    "Q0, Q1, Q2, Q3, Q4 = outcome_k_fold_fit_and_predict(\n",
     "    make_Q_model, X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], \n",
-    "    A=data_xgboost[\"treatment_bins\"], n_splits=5, output_type=\"binary\")"
+    "    A=data_xgboost[\"treatment_bins\"], n_splits=5, output_type=\"categorical\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>treatment_bins</th>\n",
-       "      <th>durable_purchase</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247282</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247283</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247284</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247285</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>247286</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>247287 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        treatment_bins  durable_purchase\n",
-       "0                  0.0               1.0\n",
-       "1                  NaN               1.0\n",
-       "2                  0.0               1.0\n",
-       "3                  0.0               NaN\n",
-       "4                  1.0               1.0\n",
-       "...                ...               ...\n",
-       "247282             0.0              -1.0\n",
-       "247283             0.0              -1.0\n",
-       "247284             4.0               1.0\n",
-       "247285             0.0               1.0\n",
-       "247286             4.0               1.0\n",
-       "\n",
-       "[247287 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
     }
    ],
-   "source": [
-    "data[[\"treatment_bins\",\"durable_purchase\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count    218495.000000\n",
-       "mean          0.036566\n",
-       "std           0.029388\n",
-       "min           0.000270\n",
-       "25%           0.018659\n",
-       "50%           0.029036\n",
-       "75%           0.045107\n",
-       "max           0.739693\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.Series(Q0_lm).describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# Fit g(x) models\n",
     "g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g_cond = conditionalize_propensity_scores(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ATE AIPTW is 0.5910816442549504 with a std = 0.015243537827750696\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Need to select the desired column of the Q predictions! ie one of {0,1,2}\n",
+    "# Need to select the desired column of the g_cond predictions! ie one of {1,2,3,4} (don't use 0! it's untreated)\n",
+    "\n",
+    "# AIPW for Good for 5-10% inflation predictors compared to 0-5%\n",
+    "data_and_nuisance_estimates_xgb = pd.DataFrame(\n",
+    "    {'g': g_cond[:,1], 'Q_control': Q0[:,2], 'Q_treat': Q1[:,2],\n",
+    "    'A': data_xgboost[\"treatment_bins\"], 'Y': data_xgboost[\"durable_purchase\"]})\n",
+    "tau_hat, std_hat = ate_aiptw(**data_and_nuisance_estimates_xgb)\n",
+    "print(f\"The ATE AIPTW is {tau_hat} with a std = {std_hat}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ATE AIPTW is 0.5665429167306432 with a std = 0.014989580650149239\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Probably need to conditionalize the Q predictions too??\n",
+    "\n",
+    "# AIPW for Good for 10-15% inflation predictors compared to 0-5%, Q conditional\n",
+    "q0_cond = conditionalize_propensity_scores(Q0)\n",
+    "q1_cond = conditionalize_propensity_scores(Q1)\n",
+    "data_and_nuisance_estimates_xgb = pd.DataFrame(\n",
+    "    {'g': g_cond[:,1], 'Q_control': q0_cond[:,2], 'Q_treat': q1_cond[:,2],\n",
+    "    'A': data_xgboost[\"treatment_bins\"], 'Y': data_xgboost[\"durable_purchase\"]})\n",
+    "tau_hat, std_hat = ate_aiptw(**data_and_nuisance_estimates_xgb)\n",
+    "print(f\"The ATE AIPTW is {tau_hat} with a std = {std_hat}\")\n"
    ]
   },
   {
@@ -1553,6 +1496,8 @@
     }
    ],
    "source": [
+    "# old - this won't work anymore\n",
+    "\n",
     "data_and_nuisance_estimates_xgb = pd.DataFrame(\n",
     "    {'g': g, 'Q_control': Q0_lm, 'Q_treat': Q1_lm, 'A': data_xgboost[\"treatment_bins\"], 'Y': data_xgboost[\"durable_purchase\"]})\n",
     "\n",
