--- a/models.ipynb
+++ b/models.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1209,12 +1209,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***APIW Estimation***"
+    "***AIPW Estimation***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1279,7 @@
     "    return g_cond\n",
     "\n",
     "\n",
-    "def outcome_k_fold_fit_and_predict(make_model, X:pd.DataFrame, y:np.array, A:np.array, n_splits:int, output_type:str):\n",
+    "def outcome_k_fold_fit_and_predict(make_model, X:pd.DataFrame, y:np.array, A:pd.DataFrame, n_splits:int, output_type:str):\n",
     "    '''\n",
     "    Implements K fold cross-fitting for the model predicting the outcome Y. \n",
     "    That is, \n",
@@ -1311,24 +1311,25 @@
     "\n",
     "    # include the treatment as input feature\n",
     "    X_w_treatment = X.copy()\n",
-    "    X_w_treatment[\"A\"] = A\n",
+    "    X_w_treatment = pd.concat([X_w_treatment, A], axis=1)\n",
+    "\n",
     "\n",
     "    # for predicting effect under treatment / control status for each data point \n",
     "    X0 = X_w_treatment.copy()\n",
-    "    X0[\"A\"] = 0\n",
+    "    X0[\"treatment_bins_0.0\"] = 1\n",
     "    X1 = X_w_treatment.copy()\n",
-    "    X1[\"A\"] = 1\n",
+    "    X1[\"treatment_bins_1.0\"] = 1\n",
     "    X2 = X_w_treatment.copy()\n",
-    "    X2[\"A\"] = 2\n",
+    "    X2[\"treatment_bins_2.0\"] = 1\n",
     "    X3 = X_w_treatment.copy()\n",
-    "    X3[\"A\"] = 3\n",
+    "    X3[\"treatment_bins_3.0\"] = 1\n",
     "    X4 = X_w_treatment.copy()\n",
-    "    X4[\"A\"] = 4\n",
+    "    X4[\"treatment_bins_4.0\"] = 1\n",
     "\n",
-    "    for train_index, test_index in kf.split(X_w_treatment, y):\n",
+    "    for train_index, test_index in kf.split(X_w_treatment, np.transpose(y)):\n",
     "        X_train = X_w_treatment.iloc[train_index]\n",
     "        y_train = y.iloc[train_index]\n",
-    "        q = make_model()\n",
+    "        q = make_Q_model()\n",
     "        q.fit(X_train, y_train)\n",
     "\n",
     "        if output_type =='categorical':\n",
@@ -1365,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1383,48 +1384,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
-      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fit Q(A,X) model\n",
     "# get conditional outcomes\n",
     "Q0, Q1, Q2, Q3, Q4 = outcome_k_fold_fit_and_predict(\n",
     "    make_Q_model, X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], \n",
-    "    A=data_xgboost[\"treatment_bins\"], n_splits=5, output_type=\"categorical\")"
+    "    A=data_xgboost[treatment_vars[:-1]], n_splits=5, output_type=\"categorical\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
-      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Fit g(x) models\n",
+    "# Fit g(x) model\n",
     "g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1433,14 +1416,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The ATE AIPTW is 0.5910816442549504 with a std = 0.015243537827750696\n"
+      "The ATE AIPTW is 0.5669477267721126 with a std = 0.013952336164497843\n"
      ]
     }
    ],
@@ -1453,19 +1436,21 @@
     "    {'g': g_cond[:,1], 'Q_control': Q0[:,2], 'Q_treat': Q1[:,2],\n",
     "    'A': data_xgboost[\"treatment_bins\"], 'Y': data_xgboost[\"durable_purchase\"]})\n",
     "tau_hat, std_hat = ate_aiptw(**data_and_nuisance_estimates_xgb)\n",
-    "print(f\"The ATE AIPTW is {tau_hat} with a std = {std_hat}\")"
+    "print(f\"The ATE AIPTW is {tau_hat} with a std = {std_hat}\")\n",
+    "\n",
+    "# Pre-Wesley's changes 12/6: The ATE AIPTW is 0.5910816442549504 with a std = 0.015243537827750696"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The ATE AIPTW is 0.5665429167306432 with a std = 0.014989580650149239\n"
+      "The ATE AIPTW is 0.5450562132691283 with a std = 0.013722857142555106\n"
      ]
     }
    ],
@@ -1509,7 +1494,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('stats')",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1523,12 +1508,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6e666a3ba3648cc9e607b3cf542e9d75d4082c9e9424a59415dd75d5759d492a"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
