more model work

--- a/models.ipynb
+++ b/models.ipynb
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1272,10 +1272,10 @@
     "    return predictions\n",
     "\n",
     "\n",
-    "def conditionalize_propensity_scores(g):\n",
-    "    divisors = g+g[:,0][:,np.newaxis]\n",
+    "def conditionalize_on_column(g,col_index=0):\n",
+    "    divisors = g+g[:,col_index][:,np.newaxis]\n",
     "    g_cond = g / divisors\n",
-    "    g_cond[:,0] = 1  # won't use, but for completeness\n",
+    "    g_cond[:,col_index] = 1  # won't use, but for completeness\n",
     "    return g_cond\n",
     "\n",
     "\n",
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1400,12 +1400,12 @@
     "# get conditional outcomes\n",
     "Q0, Q1, Q2, Q3, Q4 = outcome_k_fold_fit_and_predict(\n",
     "    make_Q_model, X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], \n",
-    "    A=data_xgboost[\"treatment_bins\"], n_splits=5, output_type=\"categorical\")"
+    "    A=data_xgboost[\"treatment_bins\"], n_splits=2, output_type=\"categorical\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1419,59 @@
    ],
    "source": [
     "# Fit g(x) models\n",
-    "g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=5)"
+    "g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.28577933, 0.02250745, 0.69171321],\n",
+       "       [0.16389981, 0.00984562, 0.82625455],\n",
+       "       [0.07960784, 0.01250745, 0.90788472],\n",
+       "       ...,\n",
+       "       [0.38725388, 0.02918985, 0.58355629],\n",
+       "       [0.44525179, 0.04272458, 0.51202363],\n",
+       "       [0.68776047, 0.02111856, 0.29112098]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.92699183, 1.        , 0.9684867 ],\n",
+       "       [0.94333305, 1.        , 0.98822435],\n",
+       "       [0.86421966, 1.        , 0.98641074],\n",
+       "       ...,\n",
+       "       [0.92990686, 1.        , 0.95236225],\n",
+       "       [0.91244539, 1.        , 0.92298383],\n",
+       "       [0.97020851, 1.        , 0.93236423]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conditionalize_on_column(Q0,1)"
    ]
   },
   {
