--- a/models.ipynb
+++ b/models.ipynb
@@ -39,17 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Excluding 2262 observations that did not answer 1 year price change question.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from load_data import data, categorical_vars, cts_vars, other_vars\n",
     "\n",
@@ -1214,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1309,12 +1301,9 @@
     "    elif output_type == 'continuous':\n",
     "        kf = KFold(n_splits=n_splits, shuffle=True, random_state=RANDOM_SEED)\n",
     "\n",
-    "    # include the treatment as input feature\n",
-    "    X_w_treatment = X.copy()\n",
-    "    X_w_treatment = pd.concat([X_w_treatment, A], axis=1)\n",
-    "\n",
-    "\n",
     "    # for predicting effect under treatment / control status for each data point \n",
+    "    X_w_treatment = pd.concat(\n",
+    "        [X, pd.DataFrame(0, columns=A.columns,index=A.index)], axis=1)\n",
     "    X0 = X_w_treatment.copy()\n",
     "    X0[\"treatment_bins_0.0\"] = 1\n",
     "    X1 = X_w_treatment.copy()\n",
@@ -1325,6 +1314,9 @@
     "    X3[\"treatment_bins_3.0\"] = 1\n",
     "    X4 = X_w_treatment.copy()\n",
     "    X4[\"treatment_bins_4.0\"] = 1\n",
+    "\n",
+    "    # include the treatment as input feature\n",
+    "    X_w_treatment = pd.concat([X, A], axis=1)\n",
     "\n",
     "    for train_index, test_index in kf.split(X_w_treatment, np.transpose(y)):\n",
     "        X_train = X_w_treatment.iloc[train_index]\n",
@@ -1354,7 +1346,7 @@
     "    # number of observations\n",
     "    n = Y.shape[0]\n",
     "\n",
-    "    # ate aiptw\\n\"\n",
+    "    # ate aiptw\"\n",
     "    tau_hat = (Q_treat - Q_control + A*(Y-Q_treat)/g - (1-A)*(Y-Q_control)/(1-g)).mean()\n",
     "    \n",
     "    # influence curve and standard error of aiptw\n",
@@ -1366,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1384,34 +1376,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit Q(A,X) model\n",
     "# get conditional outcomes\n",
     "Q0, Q1, Q2, Q3, Q4 = outcome_k_fold_fit_and_predict(\n",
     "    make_Q_model, X=data_xgboost[confounder_vars], y=data_xgboost[\"durable_purchase\"], \n",
-    "    A=data_xgboost[treatment_vars[:-1]], n_splits=5, output_type=\"categorical\")"
+    "    A=data_xgboost[treatment_vars[:-1]], n_splits=2, output_type=\"categorical\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/drewkeller/opt/anaconda3/envs/stats/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# Fit g(x) model\n",
-    "g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=5)"
+    "g = treatment_k_fold_fit_and_predict(make_g_model, X=data_xgboost[confounder_vars], A=data_xgboost[\"treatment_bins\"], n_splits=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "g_cond = conditionalize_propensity_scores(g)"
+    "g_cond = conditionalize_on_column(g)"
    ]
   },
   {
@@ -1494,7 +1504,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "Python 3.8.8 ('stats')",
    "language": "python",
    "name": "python3"
   },
@@ -1508,12 +1518,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "6e666a3ba3648cc9e607b3cf542e9d75d4082c9e9424a59415dd75d5759d492a"
    }
   }
  },
